@@ -1,12 +1,6 @@
 package de.uka.ilkd.key.smt.newsmt2;
 
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Properties;
-import java.util.Set;
+import java.util.*;
 
 import de.uka.ilkd.key.java.Services;
 import de.uka.ilkd.key.ldt.IntegerLDT;
@@ -87,8 +81,8 @@ public class IntegerOpHandler implements SMTHandler {
             return Capability.YES_THIS_OPERATOR;
         }
 
-        if (op == mul && (isIntLiteral(term.sub(0)) || isIntLiteral(term.sub(1)))) {
-            return Capability.YES_THIS_INSTANCE;
+        if (!isIntLiteral(term.sub(0))) {
+            isIntLiteral(term.sub(1));
         }
 
         return Capability.YES_THIS_INSTANCE;
@@ -120,7 +114,7 @@ public class IntegerOpHandler implements SMTHandler {
      */
     @Override
     public List<SMTHandlerProperty<?>> getProperties() {
-        return Arrays.asList(PROPERTY_PRESBURGER);
+        return List.of(PROPERTY_PRESBURGER);
     }
 
 }
